--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@leaphy-robotics/avrdude-webassembly": "^1.6.1",
     "@leaphy-robotics/leaphy-blocks": "3.0.0",
     "blockly": "^10.4.3",
+    "jszip": "^3.10.1",
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0"
