feat: nano esp32

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@floating-ui/dom": "^1.6.3",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@leaphy-robotics/avrdude-webassembly": "^1.6.1",
+    "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.0.0",
+    "@types/w3c-web-usb": "^1.0.10",
+    "base64-js": "^1.5.1",
     "blockly": "^10.4.3",
     "jszip": "^3.10.1",
     "monaco-editor": "^0.48.0",
