--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-static-copy": "^1.0.3"
+    "vite": "^5.2.0"
   },
   "dependencies": {
     "@blockly/field-bitmap": "^4.0.16",
