--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jszip": "^3.10.1",
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
-    "svelte-i18n": "^4.0.0"
+    "svelte-i18n": "^4.0.0",
+    "vite-plugin-static-copy": "^1.0.3"
   }
 }
