--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@leaphy-robotics/avrdude-webassembly": "^1.6.1",
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.0.0",
-    "@leaphy-robotics/picotool-wasm": "^1.0.2",
+    "@leaphy-robotics/picotool-wasm": "1.0.3",
     "@sentry/svelte": "8.0.0-beta.5",
     "@types/w3c-web-usb": "^1.0.10",
     "base64-js": "^1.5.1",
@@ -38,6 +38,6 @@
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
-    "vite-plugin-static-copy": "^1.0.3"
+    "vite-plugin-static-copy": "1.0.4"
   }
 }
