--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@leaphy-robotics/picotool-wasm": "1.0.3",
     "@sentry/svelte": "8.0.0-beta.5",
     "@types/w3c-web-usb": "^1.0.10",
+    "@xterm/xterm": "^5.5.0",
     "base64-js": "^1.5.1",
     "blockly": "^10.4.3",
     "jszip": "^3.10.1",
