--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-top-level-await": "^1.4.1"
   },
   "dependencies": {
     "@blockly/field-bitmap": "^4.0.16",
