test: Added Playwright (#9)
* fix: updated playwright image in github workflow to correct version

---------

Co-authored-by: pajotg <pajotg@pajotg.pajotg>
Co-authored-by: Ronald Moesbergen <rmoesbergen@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+	"test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.1",
     "@sentry/vite-plugin": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
