--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-	"test": "playwright test",
+    "test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
@@ -18,6 +18,8 @@
     "@types/node": "^20.11.30",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/wicg-file-system-access": "^2023.10.5",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
     "svelte": "^5.0.0-next.115",
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
