--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Check pull requests
 on:
   pull_request:
     branches: [main, master]
@@ -17,6 +17,8 @@ jobs:
           cache: yarn
       - name: Install node modules
         run: yarn --frozen-lockfile --prefer-offline
+      - name: Run Prettier
+        run: yarn prettier -c src tests
       - name: Run Playwright tests
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
