--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/wicg-file-system-access": "^2023.10.5",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
-    "svelte": "^5.0.0-next.115",
+    "svelte": "5.0.0-next.121",
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
