--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,8 +17,8 @@ jobs:
           cache: yarn
       - name: Install node modules
         run: yarn --frozen-lockfile --prefer-offline
-      - name: Run Prettier
-        run: yarn prettier -c src tests
+      - name: Run Biome
+        run: yarn biome check src tests
       - name: Run Playwright tests
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
