--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/w3c-web-serial": "^1.0.6",
     "@types/wicg-file-system-access": "^2023.10.5",
     "svelte": "5.0.0-next.121",
-    "svelte-check": "^3.6.7",
+    "svelte-check": "3.7.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
