--- a/biome.json
+++ b/biome.json
@@ -13,6 +13,9 @@
 			"suspicious": {
 				"noAssignInExpressions": "off",
 				"noExplicitAny": "off"
+			},
+			"style": {
+				"useConst": "off"
 			}
 		}
 	}
