--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install node modules
         run: yarn --frozen-lockfile --prefer-offline
       - name: Run Biome
-        run: yarn biome check src tests
+        run: yarn biome ci src tests
       - name: Run Playwright tests
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
