--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,6 +26,12 @@ jobs:
         if: github.ref_type == 'branch'
         uses: docker/build-push-action@v5
         with:
+          build-args:
+            - VITE_BACKEND_URL="https://testleaphyeasybloqs.com:8443"
+            - VITE_MATOMO_SITE_ID="2"
+            - VITE_BACKEND_URL="https://webservice.leaphyeasybloqs.com"
+            - VITE_SENTRY_DSN="{{ $secrets.VITE_SENTRY_DSN }}"
+            - VITE_SENTRY_SAMPLE_RATE="1.0"
           file: Dockerfile
           context: .
           push: true
@@ -34,7 +40,7 @@ jobs:
       - name: Redeploy TEST
         if: github.ref_type == 'branch'
         run: |
-          curl https://admin.leaphyeasybloqs.com/hooks/update-docker-image?stack=leaphy-webbased-svelte -H "X-Token: ${{ secrets.WEBHOOK_TOKEN }}"
+          curl https://admin.leaphyeasybloqs.com/hooks/update-docker-image?stack=leaphy-webbased-test -H "X-Token: ${{ secrets.WEBHOOK_TOKEN }}"
 
       - name: Clean up old images
         uses: actions/delete-package-versions@v5
