--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,9 +27,10 @@ jobs:
         run: |
           cat << EOF > .env
           VITE_BACKEND_URL="https://testleaphyeasybloqs.com:8443"
+          VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
           VITE_MATOMO_SITE_ID="2"
           VITE_BACKEND_URL="https://webservice.leaphyeasybloqs.com"
-          VITE_SENTRY_DSN="{{ $secrets.VITE_SENTRY_DSN }}"
+          VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
           VITE_SENTRY_SAMPLE_RATE="1.0"
           EOF
 
