--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.0.0",
     "@leaphy-robotics/picotool-wasm": "1.0.3",
+    "@leaphy-robotics/webusb-ftdi": "1.0.1",
     "@sentry/svelte": "8.0.0-beta.5",
     "@types/w3c-web-usb": "^1.0.10",
     "@xterm/addon-fit": "^0.10.0",
@@ -45,6 +46,7 @@
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
-    "vite-plugin-static-copy": "1.0.4"
+    "vite-plugin-static-copy": "1.0.4",
+    "web-serial-polyfill": "^1.0.15"
   }
 }
