feat: add charts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sentry/vite-plugin": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20.11.30",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/wicg-file-system-access": "^2023.10.5",
@@ -42,6 +43,9 @@
     "@xterm/xterm": "^5.5.0",
     "base64-js": "^1.5.1",
     "blockly": "^10.4.3",
+    "chart.js": "^4.4.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
     "jszip": "^3.10.1",
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
