--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,12 @@ jobs:
         run: yarn --frozen-lockfile --prefer-offline
       - name: Run Biome
         run: yarn biome ci src tests
+      - name: Run linter
+        run: yarn lint
+      - name: Run ESLint
+        run: npx eslint .
+      - name: Run prettier
+        run: npx prettier -c ./src
       - name: Run Playwright tests
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
