test: install libsimavr-dev in GH actions to allow testing

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,8 @@ jobs:
         run: yarn --frozen-lockfile --prefer-offline
       - name: Run Biome
         run: yarn biome ci src tests
+      - name: Install libsimavr
+        run: sudo apt-get install -y libsimavr-dev
       - name: Run Playwright tests
         run: yarn playwright test
       - uses: actions/upload-artifact@v4
