--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "monaco-editor": "^0.48.0",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
+    "svelte-markdown": "^0.4.1",
     "vite-plugin-static-copy": "1.0.4",
     "web-serial-polyfill": "^1.0.15"
   }
