--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
 VITE_MATOMO_SITE_ID="1"
-VITE_BACKEND_URL="https://webservice.leaphyeasybloqs.com"
+VITE_BACKEND_URL="https://leaphyeasybloqs.com"
