--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
         if: github.ref_type == 'branch'
         run: |
           cat << EOF > .env
-          VITE_BACKEND_URL="https://testleaphyeasybloqs.com:8443"
+          VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
           VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
           VITE_MATOMO_SITE_ID="2"
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
