--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,8 +37,8 @@ jobs:
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
           VITE_SENTRY_SAMPLE_RATE="1.0"
           EOF
-          echo "ENV=test" >> $GITHUB_ENV
-          echo "STACK=leaphy-webbased-test" >> $GITHUB_ENV
+          echo "ENV=test" >> "$GITHUB_ENV"
+          echo "STACK=leaphy-webbased-test" >> "$GITHUB_ENV"
 
       - name: Create PROD env file
         if: github.ref_type == 'tag'
@@ -50,8 +50,8 @@ jobs:
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
           VITE_SENTRY_SAMPLE_RATE="0.0"
           EOF
-          echo "ENV=prod" >> $GITHUB_ENV
-          echo "STACK=leaphy-webbased" >> $GITHUB_ENV
+          echo "ENV=prod" >> "$GITHUB_ENV"
+          echo "STACK=leaphy-webbased" >> "$GITHUB_ENV"
 
       - name: Build application
         env:
@@ -67,11 +67,11 @@ jobs:
           file: Dockerfile
           context: .
           push: true
-          tags: ghcr.io/leaphy-robotics/leaphy-webbased-svelte/leaphy-webbased-svelte:${ENV}
+          tags: ghcr.io/leaphy-robotics/leaphy-webbased-svelte/leaphy-webbased-svelte:$ENV
 
       - name: Redeploy
         run: |
-          curl https://admin.leaphyeasybloqs.com/hooks/update-docker-image?stack=${STACK} -H "X-Token: ${{ secrets.WEBHOOK_TOKEN }}"
+          curl https://admin.leaphyeasybloqs.com/hooks/update-docker-image?stack=$STACK -H "X-Token: ${{ secrets.WEBHOOK_TOKEN }}"
 
       - name: Clean up old images
         uses: actions/delete-package-versions@v5
