--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.2",
-    "@leaphy-robotics/playwright-arduino": "^1.0.4",
+    "@leaphy-robotics/playwright-arduino": "1.0.5",
     "@playwright/test": "^1.43.1",
     "@sentry/vite-plugin": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
@@ -21,7 +21,7 @@
     "@types/node": "^20.11.30",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/wicg-file-system-access": "^2023.10.5",
-    "svelte": "5.0.0-next.121",
+    "svelte": "5.0.0-next.134",
     "svelte-check": "3.7.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
@@ -32,7 +32,8 @@
     "@blockly/field-bitmap": "^4.0.16",
     "@blockly/workspace-backpack": "^5.3.7",
     "@floating-ui/dom": "^1.6.3",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@leaphy-robotics/avrdude-webassembly": "^1.6.1",
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.2.1",
