--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
     "@leaphy-robotics/playwright-arduino": "1.0.5",
     "@playwright/test": "^1.43.1",
     "@sentry/vite-plugin": "^2.16.1",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@sveltejs/vite-plugin-svelte": "^5.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "@types/chart.js": "^2.9.41",
-    "@types/node": "^20.11.30",
+    "@types/node": "^22.10.1",
     "@types/w3c-web-serial": "^1.0.6",
     "@types/wicg-file-system-access": "^2023.10.5",
     "svelte": "^5.8.1",
-    "svelte-check": "3.7.1",
+    "svelte-check": "^4.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.14",
+    "vite": "^6.0.3",
     "vite-plugin-top-level-await": "^1.4.1"
   },
   "dependencies": {
-    "@blockly/field-bitmap": "^4.0.16",
-    "@blockly/workspace-backpack": "^5.3.7",
+    "@blockly/field-bitmap": "4",
+    "@blockly/workspace-backpack": "5",
     "@floating-ui/dom": "^1.6.3",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@leaphy-robotics/avrdude-webassembly": "1.7.0",
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.3.1",
@@ -44,16 +44,16 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "base64-js": "^1.5.1",
-    "blockly": "^10.4.3",
+    "blockly": "10",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
-    "monaco-editor": "^0.48.0",
+    "monaco-editor": "^0.52.0",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
     "svelte-markdown": "^0.4.1",
-    "vite-plugin-static-copy": "1.0.4",
+    "vite-plugin-static-copy": "^2.2.0",
     "web-serial-polyfill": "^1.0.15"
   }
 }
