--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
     "monaco-editor": "^0.52.0",
+    "rrweb": "^2.0.0-alpha.4",
+    "socket.io-client": "^4.8.1",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
     "svelte-markdown": "^0.4.1",
