feat: implement recordings

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
 VITE_MATOMO_SITE_ID="1"
 VITE_BACKEND_URL="https://leaphyeasybloqs.com"
+VITE_RECORDINGS_API="https://recordings.leaphyeasybloqs.com"
+VITE_RECORDINGS_ADDRESS=".leaphyeasybloqs.com"
