--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
 VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
+VITE_RECORDINGS_API="http://localhost:5173"
+VITE_RECORDINGS_ADDRESS=".localhost"
