--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,6 +56,7 @@ jobs:
           EOF
           echo "ENV=prod" >> "$GITHUB_ENV"
           echo "STACK=leaphy-webbased" >> "$GITHUB_ENV"
+          echo "SENTRY_RELEASE=webbased-${{ github.ref_name }}" >> "$GITHUB_ENV"
 
       - name: Build application
         env:
