fix: revert to old uploaders and fix android uploads (#164)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.2",
-    "@leaphy-robotics/playwright-arduino": "1.0.5",
+    "@leaphy-robotics/playwright-arduino": "1.0.6",
     "@playwright/test": "^1.43.1",
     "@sentry/vite-plugin": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.1",
@@ -34,20 +34,21 @@
     "@floating-ui/dom": "^1.6.3",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@leaphy-robotics/avrdude-webassembly": "1.7.1",
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
     "@leaphy-robotics/leaphy-blocks": "3.3.3",
     "@leaphy-robotics/picotool-wasm": "1.0.3",
-    "@leaphy-robotics/webusb-ftdi": "1.0.1",
+    "@leaphy-robotics/webusb-ftdi": "1.0.2",
     "@sentry/svelte": "^8.34.0",
     "@types/w3c-web-usb": "^1.0.10",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "base64-js": "^1.5.1",
     "blockly": "10",
+    "buffer": "^6.0.3",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
+    "intel-hex": "^0.2.0",
     "jszip": "^3.10.1",
     "monaco-editor": "^0.52.0",
     "rrweb": "^2.0.0-alpha.4",
