--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,3 +30,7 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+      - name: Build application
+        run: |
+          export NODE_OPTIONS="--max-old-space-size=4096"
+          yarn build
