--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,11 +31,9 @@ jobs:
         if: github.ref_type == 'branch'
         run: |
           cat << EOF > .env
-          VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
-          VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
-          VITE_MATOMO_SITE_ID="2"
+          VITE_BACKEND_URL=""
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
-          VITE_SENTRY_SAMPLE_RATE="1.0"
+          VITE_SENTRY_SAMPLE_RATE="0.0"
           VITE_RECORDINGS_API="https://recordings.leaphyeasybloqs.com"
           VITE_RECORDINGS_ADDRESS=".testleaphyeasybloqs.com"
           EOF
@@ -46,8 +44,8 @@ jobs:
         if: github.ref_type == 'tag'
         run: |
           cat << EOF > .env
-          VITE_BACKEND_URL="https://leaphyeasybloqs.com"
-          VITE_MATOMO_URL="https://leaphyeasybloqs.com/matomo/"
+          VITE_BACKEND_URL=""
+          VITE_MATOMO_URL="/matomo/"
           VITE_MATOMO_SITE_ID="1"
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
           VITE_SENTRY_SAMPLE_RATE="0.0"
@@ -65,6 +63,13 @@ jobs:
           export NODE_OPTIONS="--max-old-space-size=4096"
           yarn --frozen-lockfile --prefer-offline
           yarn build
+
+      - name: Upload build files
+        if: github.ref_type == 'tag'
+        uses: actions/upload-artifact@v4
+        with:
+          name: leaphyeasybloqs-${{ github.ref_name }}
+          path: ./dist
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
