--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@leaphy-robotics/avrdude-webassembly": "1.7.0",
     "@leaphy-robotics/dfu-util-wasm": "^1.0.2",
-    "@leaphy-robotics/leaphy-blocks": "^3.2.1-python",
+    "@leaphy-robotics/leaphy-blocks": "3.2.2-python",
     "@leaphy-robotics/picotool-wasm": "1.0.3",
     "@leaphy-robotics/webusb-ftdi": "1.0.1",
     "@sentry/svelte": "8.0.0-beta.5",
