--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "socket.io-client": "^4.8.1",
     "svelte-fa": "^4.0.2",
     "svelte-i18n": "^4.0.0",
+    "svelte-loading-spinners": "^0.3.6",
     "svelte-markdown": "^0.4.1",
     "vite-plugin-static-copy": "^2.2.0",
     "web-serial-polyfill": "^1.0.15"
