ci: add elimupi offline build

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
   workflow_dispatch: {}
-
+c
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
         if: github.ref_type == 'branch'
         run: |
           cat << EOF > .env
-          VITE_BACKEND_URL=""
+          VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
           VITE_SENTRY_SAMPLE_RATE="0.0"
           VITE_RECORDINGS_API="https://recordings.leaphyeasybloqs.com"
@@ -44,7 +44,7 @@ jobs:
         if: github.ref_type == 'tag'
         run: |
           cat << EOF > .env
-          VITE_BACKEND_URL=""
+          VITE_BACKEND_URL="https://leaphyeasybloqs.com"
           VITE_MATOMO_URL="/matomo/"
           VITE_MATOMO_SITE_ID="1"
           VITE_SENTRY_DSN="${{ secrets.VITE_SENTRY_DSN }}"
