--- a/.github/workflows/build-elimupi.yaml
+++ b/.github/workflows/build-elimupi.yaml
@@ -21,7 +21,7 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: Create ElimuPi env file
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         run: |
           cat << EOF > .env
           VITE_BACKEND_URL=""
@@ -31,7 +31,7 @@ jobs:
           echo "ENV=elimu" >> "$GITHUB_ENV"
 
       - name: Build application
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         run: |
           export NODE_OPTIONS="--max-old-space-size=4096"
           pnpm install
@@ -39,7 +39,7 @@ jobs:
 
       - name: Upload build files
         uses: actions/upload-artifact@v4
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         with:
           name: leaphyeasybloqs-${{ github.ref_name }}
           path: ./dist
