--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Create TEST env file
         if: github.ref_type == 'branch'
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         run: |
           cat << EOF > .env
           VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
@@ -43,7 +43,7 @@ jobs:
 
       - name: Create PROD env file
         if: github.ref_type == 'tag'
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         run: |
           cat << EOF > .env
           VITE_BACKEND_URL="https://leaphyeasybloqs.com"
@@ -59,7 +59,7 @@ jobs:
           echo "SENTRY_RELEASE=webbased-${{ github.ref_name }}" >> "$GITHUB_ENV"
 
       - name: Build application
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
@@ -69,7 +69,7 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
-        working_directory: ./packages/client
+        working-directory: ./packages/client
         with:
           file: Dockerfile
           context: .
