--- a/.github/workflows/publish-blocks.yaml
+++ b/.github/workflows/publish-blocks.yaml
@@ -11,6 +11,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
       - uses: actions/setup-node@v3
         with:
           node-version: "20.x"
@@ -19,7 +25,7 @@ jobs:
       - name: Build
         working-directory: packages/blocks
         run: |
-          pnpm ci && pnpm run build
+          pnpm install && pnpm run build
 
       - name: Publish to npm
         working-directory: packages/blocks
