fix: set correct dockerfile

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile
+          file: ./packages/client/Dockerfile
           context: ./packages/client
           push: true
           tags: ghcr.io/leaphy-robotics/leaphy-webbased-svelte/leaphy-webbased-svelte:${{ env.ENV }}
