--- a/.github/workflows/build-elimupi.yaml
+++ b/.github/workflows/build-elimupi.yaml
@@ -40,7 +40,6 @@ jobs:
 
       - name: Upload build files
         uses: actions/upload-artifact@v4
-        working-directory: ./packages/client
         with:
           name: leaphyeasybloqs-${{ github.ref_name }}
-          path: ./dist
+          path: ./packages/client/dist
