--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
 		"@types/chart.js": "^2.9.41",
 		"@types/node": "^22.15.3",
 		"@types/w3c-web-serial": "^1.0.8",
+		"@types/web-bluetooth": "^0.0.21",
 		"@types/wicg-file-system-access": "^2023.10.6",
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.6",
@@ -39,6 +40,7 @@
 		"@leaphy-robotics/webusb-ftdi": "1.0.3",
 		"@sentry/browser": "^8.55.0",
 		"@sentry/svelte": "^8.55.0",
+		"@tensorflow/tfjs": "^4.22.0",
 		"@types/w3c-web-usb": "^1.0.10",
 		"@xterm/addon-fit": "^0.10.0",
 		"@xterm/xterm": "^5.5.0",
