--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
