--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
 		"@types/chart.js": "^2.9.41",
 		"@types/node": "^22.15.3",
 		"@types/w3c-web-serial": "^1.0.8",
+		"@types/web-bluetooth": "^0.0.21",
 		"@types/wicg-file-system-access": "^2023.10.6",
 		"svelte": "^5.28.2",
 		"svelte-check": "^4.1.6",
@@ -37,6 +38,7 @@
 		"@leaphy-robotics/leaphy-blocks": "workspace:*",
 		"@leaphy-robotics/picotool-wasm": "1.0.3",
 		"@leaphy-robotics/webusb-ftdi": "1.0.3",
+		"@tensorflow/tfjs": "^4.22.0",
 		"@sentry/browser": "^9.27.0",
 		"@sentry/svelte": "^9.27.0",
 		"@types/w3c-web-usb": "^1.0.10",
