--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -6,7 +6,8 @@
 		"watch": "tsup --watch --ignore-watch tmp"
 	},
 	"dependencies": {
-		"blockly": "^10.4.3"
+		"blockly": "^10.4.3",
+		"@leaphy-robotics/schemas": "workspace:*"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
