--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -6,8 +6,8 @@
 		"watch": "tsup --watch --ignore-watch tmp"
 	},
 	"dependencies": {
-		"blockly": "^10.4.3",
-		"@leaphy-robotics/schemas": "workspace:*"
+		"@leaphy-robotics/schemas": "workspace:*",
+		"blockly": "^12.3.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.26.10",
