--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,7 +21,7 @@
 		"@types/w3c-web-serial": "^1.0.8",
 		"@types/web-bluetooth": "^0.0.21",
 		"@types/wicg-file-system-access": "^2023.10.6",
-		"svelte": "^5.28.2",
+		"svelte": "^5.41.4",
 		"svelte-check": "^4.1.6",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
@@ -56,6 +56,8 @@
 		"intel-hex": "^0.2.0",
 		"jszip": "^3.10.1",
 		"monaco-editor": "^0.52.0",
+		"overlayscrollbars": "^2.12.0",
+		"overlayscrollbars-svelte": "^0.5.5",
 		"rrweb": "2.0.0-alpha.4",
 		"socket.io-client": "^4.8.1",
 		"svelte-fa": "^4.0.4",
