feat: filter extensions

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,7 +7,7 @@
 			"$domain/*": ["./src/lib/domain/*"],
 			"$state/*": ["./src/lib/state/*"],
 			"$education/*": ["./src/lib/education/*"],
-			"blockly/*": ["node_modules/blockly/*"]
+			"blockly/*": ["./node_modules/blockly/*"]
 		},
 
 		"target": "ESNext",
