--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
 		"@leaphy-robotics/playwright-arduino": "1.0.6",
 		"@playwright/test": "^1.52.0",
 		"@sentry/vite-plugin": "^3.5.0",
