--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,8 +29,6 @@
 		"vite-plugin-top-level-await": "^1.5.0"
 	},
 	"dependencies": {
-		"@ai-sdk/groq": "^2.0.32",
-		"@ai-sdk/mistral": "^2.0.25",
 		"@blockly/field-bitmap": "^4.1.1",
 		"@blockly/toolbox-search": "^3.1.0",
 		"@blockly/workspace-backpack": "^5.3.9",
@@ -47,7 +45,6 @@
 		"@types/w3c-web-usb": "^1.0.10",
 		"@xterm/addon-fit": "^0.10.0",
 		"@xterm/xterm": "^5.5.0",
-		"ai": "^5.0.104",
 		"base64-js": "^1.5.1",
 		"blockly": "^12.3.1",
 		"buffer": "^6.0.3",
@@ -68,7 +65,6 @@
 		"svelte-loading-spinners": "^0.3.6",
 		"svelte-markdown": "^0.4.1",
 		"vite-plugin-static-copy": "^2.3.2",
-		"web-serial-polyfill": "^1.0.15",
-		"zod": "^4.1.13"
+		"web-serial-polyfill": "^1.0.15"
 	}
 }
