--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,11 +1,4 @@
+
 packages:
-  - ./packages/**
-ignoredBuiltDependencies:
-  - '@biomejs/biome'
-onlyBuiltDependencies:
-  - '@sentry/cli'
-  - '@serialport/bindings-cpp'
-  - '@swc/core'
-  - core-js
-  - es5-ext
-  - esbuild
+  - "packages/client"
+
