--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -13,6 +13,7 @@
 		"target": "ESNext",
 		"useDefineForClassFields": true,
 		"module": "ESNext",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		/**
 		 * Typecheck JS in `.svelte` and `.js` files by default.
