--- a/packages/client/.env.development
+++ b/packages/client/.env.development
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
+VITE_BACKEND_URL="https://testleaphyeasybloqs.com/api"
 VITE_RECORDINGS_API="http://localhost:5173"
 VITE_RECORDINGS_ADDRESS=".localhost"
