--- a/packages/client/.env.playwright
+++ b/packages/client/.env.playwright
@@ -1,3 +1,3 @@
-VITE_BACKEND_URL="https://testleaphyeasybloqs.com"
+VITE_BACKEND_URL="https://testleaphyeasybloqs.com/api"
 VITE_SENTRY_DSN="https://sentry_test@testleaphyeasybloqs.com:8443/2"
 VITE_SENTRY_SAMPLE_RATE="1.0"
