--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -53,6 +53,7 @@
 		"date-fns": "^4.1.0",
 		"dexie": "^4.0.11",
 		"esbuild": "^0.25.9",
+		"esptool-js": "^0.5.7",
 		"intel-hex": "^0.2.0",
 		"jszip": "^3.10.1",
 		"monaco-editor": "^0.52.0",
